# TpControl

./: .claudeignore  .cproject  .mxproject  .project  CJHR31_raw.txt  CJHR31_spec.txt  CLAUDE.md  CMakeLists.txt  STM32F103C8TX_FLASH.ld  TpControl.ioc  引脚分配图.xlsx
Core/Src/: stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c
PowerDesigner/TpControlV01/: ObjectOrientedModel_1.oob  ObjectOrientedModel_1.oom  TpControlV01.pjb  TpControlV01.prj
SI/TpControlV01.si4project/: TpControlV01.SearchResults  TpControlV01.bookmarks.xml  TpControlV01.sip_xab  TpControlV01.sip_xad  TpControlV01.sip_xc  TpControlV01.sip_xf  TpControlV01.sip_xm  TpControlV01.sip_xr  TpControlV01.sip_xsb  TpControlV01.sip_xsd  TpControlV01.siproj  TpControlV01.siproj_settings.xml  TpControlV01.siwork  TpControlV01.snippets.xml
SI/TpControlV01.si4project/cache/parse/: .._Core_Inc_stm32f1xx_hal_conf.h.sisc  .._Core_Src_stm32f1xx_hal_msp.c.sisc  .._Core_Src_stm32f1xx_hal_timebase_tim.c.sisc  .._Core_Src_stm32f1xx_it.c.sisc  .._Core_Src_syscalls.c.sisc  .._Core_Src_sysmem.c.sisc  .._Core_Src_system_stm32f1xx.c.sisc  .._Core_Startup_startup_stm32f103c8tx.s.sisc  .._Drivers_CMSIS_Device_ST_STM32F1xx_Include_stm32f103xb.h.sisc  .._Drivers_CMSIS_Device_ST_STM32F1xx_Include_stm32f1xx.h.sisc  .._Drivers_CMSIS_Device_ST_STM32F1xx_Include_system_stm32f1xx.h.sisc  .._Drivers_CMSIS_Include_cmsis_armcc.h.sisc  .._Drivers_CMSIS_Include_cmsis_armclang.h.sisc  .._Drivers_CMSIS_Include_cmsis_compiler.h.sisc  .._Drivers_CMSIS_Include_cmsis_gcc.h.sisc  .._Drivers_CMSIS_Include_cmsis_iccarm.h.sisc  .._Drivers_CMSIS_Include_cmsis_version.h.sisc  .._Drivers_CMSIS_Include_core_armv8mbl.h.sisc  .._Drivers_CMSIS_Include_core_armv8mml.h.sisc  .._Drivers_CMSIS_Include_core_cm0.h.sisc  .._Drivers_CMSIS_Include_core_cm0plus.h.sisc  .._Drivers_CMSIS_Include_core_cm1.h.sisc  .._Drivers_CMSIS_Include_core_cm23.h.sisc  .._Drivers_CMSIS_Include_core_cm3.h.sisc  .._Drivers_CMSIS_Include_core_cm33.h.sisc  .._Drivers_CMSIS_Include_core_cm4.h.sisc  .._Drivers_CMSIS_Include_core_cm7.h.sisc  .._Drivers_CMSIS_Include_core_sc000.h.sisc  .._Drivers_CMSIS_Include_core_sc300.h.sisc  .._Drivers_CMSIS_Include_mpu_armv7.h.sisc  .._Drivers_CMSIS_Include_mpu_armv8.h.sisc  .._Drivers_CMSIS_Include_tz_context.h.sisc  .._Drivers_STM32F1xx_HAL_Driver_Inc_Legacy_stm32_hal_legacy.h.sisc  .._Drivers_STM32F1xx_HAL_Driver_Inc_stm32f1xx_hal.h.sisc  .._Drivers_STM32F1xx_HAL_Driver_Inc_stm32f1xx_hal_adc.h.sisc  .._Drivers_STM32F1xx_HAL_Driver_Inc_stm32f1xx_hal_adc_ex.h.sisc  .._Drivers_STM32F1xx_HAL_Driver_Inc_stm32f1xx_hal_cortex.h.sisc  .._Drivers_STM32F1xx_HAL_Driver_Inc_stm32f1xx_hal_def.h.sisc  .._Drivers_STM32F1xx_HAL_Driver_Inc_stm32f1xx_hal_dma.h.sisc  .._Drivers_STM32F1xx_HAL_Driver_Inc_stm32f1xx_hal_dma_ex.h.sisc  (+135 more)
Tools/: disable_defender.ps1  font_txt_to_c_array.py  parse_cjhr31_table.py  upload_resource.py
Tools/Config/: stlink.cfg
Tools/SVD/: STM32F103xx.SFR  STM32F103xx.sfd
User/Gui/: GuiTask.c  GuiTask.h
User/Hardeware/: gpio.c  gpio.h  led.c  led.h
User/Hardeware/BLE/: ble..c  ble.h
User/Hardeware/Buzz/: buzz..c  buzz.h
User/Hardeware/Control/: control.c  control.h
User/Hardeware/Delay/: delay.c  delay.h
User/Hardeware/Flash/: W25Q80.c  W25Q80.h
User/Hardeware/Fs/: lfs.c  lfs.h  lfs_util.h  w25q80_fs.c  w25q80_fs.h
User/Hardeware/Humidity/: Humidity..c  Humidity.h  cjhr31_table.c  cjhr31_table.h  cjhr31_table_write.c  cjhr31_table_write.h
User/Hardeware/Key/: key.c  key.h
User/Hardeware/Lcd/: Font.c  Font.h  Font_Write.c  GUI.c  GUI.h  Image.c  Image.h  Lcd_Driver.c  Lcd_Driver.h
User/Hardeware/RTC/: rtc.c  rtc.h
User/Hardeware/Spi/: spi-sel..c  spi.c  spi.h  spi_sel.h
User/Hardeware/Temperature/: Temperature.c  Temperature.h
User/Hardeware/Uart/: retarget.c  retarget.h  uart.c  uart.h
User/Hardeware/adc/: adc.c  adc.h
User/Hardeware/tim/: tim.c  tim.h
User/System/: FreeRTOSConfig.h  app_config.h  main.c  sys.c  sys.h
User/System/Resource/: resource_uart.c  resource_uart.h  ymodem.c  ymodem.h
User/System/Stdio/: xprintf.c  xprintf.h
User/System/Tasks/: MyTask.c  MyTask.h
doc/: CJHR31_lookup_table.csv  CJHR31_lookup_table.md  CLion图片字体烧录宏使用说明.md  UART资源上传模式使用说明.md  littlefs_W25Q80_driver_analysis.md  littlefs_W25Q80_fix_plan.md  任务划分.md  定时器功能规格.md
doc/image/: task_architecture.drawio
img/: alarm1.c  alarm2.c  ble.c  chicken.c  clock.c  days.c  egg.c  font 转换脚本用法.md  font.txt  font.txt_index.txt  font12.c  font_txt_to_c_array.py  humidity.c  jpg_to_tft_c_array.py  jpg转换c数组.md  set_fire.c
img/icon_12x12/: 12x12.aseprite  add_12x12.c  clock_12x12.c  fan_12x12.c  hot_12x12.c  hum_12x12.c  icon_12x12.h  leftArrow_12x12.c  reduce_12x12.c  rightArrow_12x12.c  set_12x12.c
img/icon_24x24/: 24x24.aseprite  bean_24x24.c  bread_24x24.c  chicken_24x24.c  egg_24x24.c  fan_24x24.c  heat_24x24.c  hum_24x24.c  icon_24x24.h  printer_24x24.c  start_24x24.c  temp_24x24.c  temp_curve_24x24.c
img/icon_48x24/: 48x24.aseprite  icon_48x24.h  mode_button_48x24.c  start_button_48x24.c  stop_button_48x24.c
img/old/: 3dprinter.aseprite  3dprinter.c  Sprite-0001.aseprite  alarm.aseprite  buzz.c  chicken.aseprite  egg.aseprite  fan.c  fire.c
